--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,11 +2,14 @@ project:
   type: website
 
 website:
-  title: "Predicting Psychiatric Disorders from EEG Bands"
+  title: "Predicting Psychiatric Disorders"
   navbar:
     left:
       - href: index.qmd
         text: Home
+      - Model.qmd
+      - Sources.qmd
+      - Data.qmd
       - about.qmd
 
 format:
@@ -16,6 +19,7 @@ format:
       - brand
     css: styles.css
     toc: true
+
 
 
 
